TCP ACK system for verifying requests

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,22 @@
-# Authorization token required from clients
+# Authorization token required from clients (body field x_studio_proxy_auth_token or header X-Proxy-Auth-Token)
 AUTH_TOKEN=your_auth_token
 
-# Wex API credentials
+# WEX API credentials
 WEX_API_URL=https://api.wex.com/merchant/log
 WEX_USERNAME=your_username
 WEX_PASSWORD=your_password
 MERCHANT_CODE=*
 
-# Test mode (true/false). When true, skips calling Wex and uses dummy response
+# Test mode (true/false). When true, skips calling WEX and uses a dummy response
 TEST_MODE=false
-# Downstream webhook URL to receive parsed responses
+
+# Downstream webhook URL to receive parsed responses (Odoo intake)
 WEBHOOK_URL=https://your.webhook/endpoint
+# Max attempts to deliver downstream success before giving up (default 5)
+MAX_DOWNSTREAM=5
+# How long to wait for an /ack per attempt, in seconds (default 10)
+ACK_TIMEOUT_SECONDS=10
+# Base seconds for exponential backoff between attempts: 2,4,8,... (default 2)
+DOWNSTREAM_RETRY_BASE_SECONDS=2
+# HTTP timeout (seconds) for each downstream POST attempt (default 10)
+DOWNSTREAM_POST_TIMEOUT_SECONDS=10
