--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,10 @@ services:
       - MERCHANT_CODE=${MERCHANT_CODE:-*}
       - TEST_MODE=${TEST_MODE:-true}
       - WEBHOOK_URL=${WEBHOOK_URL}
+      - MAX_DOWNSTREAM=${MAX_DOWNSTREAM:-5}
+      - ACK_TIMEOUT_SECONDS=${ACK_TIMEOUT_SECONDS:-10}
+      - DOWNSTREAM_RETRY_BASE_SECONDS=${DOWNSTREAM_RETRY_BASE_SECONDS:-2}
+      - DOWNSTREAM_POST_TIMEOUT_SECONDS=${DOWNSTREAM_POST_TIMEOUT_SECONDS:-10}
     ports:
       - "8844:5000"
     restart: unless-stopped
